--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -113,7 +113,7 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>Founded ClioGraphica, Location Intelligence Firm</strong>
+							<strong>Founded, ClioGraphica | Location Intelligence Firm</strong>
 								<div>11/2015 - present</div>
 								<ul>
 									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide data digitization/creation, geospatial analysis, data storage (sale), and intelligence reports of client businesses or organizations</li>
@@ -158,7 +158,7 @@
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
 							<strong>Member of Virtual Hartford Research Team</strong>
-							<div>10/2013 – present</div>
+							<div>10/2013 – 12/2015</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
 									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
