--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -72,13 +72,17 @@
 
 			<li class="project-link">
 
-				<a href="GeoMorph_Project.jpg" target="_blank">Geomorphology Project</a>
+				<a href="GeoMorph_Project.jpg" target="_blank">Geomorphology Case Study Research</a>
+
+				<a href="Geomorph-Report-LiDAR.pdf" target="_blank">Geomorphology LiDAR Report</a>
+
+				<a href="Geomorph-GSA-Conference.pdf" target="_blank">Geosciences at the NE Geological Society of America Conference</a>
 
 			</li>
 
 			<li class="project-content">
 
-				<p>UConn Professor William Ouimet's Geomorphology and Earth Processes Research project has taught me about the scientific investigative component of analyzing historical questions. As a member of his research group I have been digitizing the northwestern portion of the state of Connecticut. Searching and mapping the many thousands of geographic (charcoal hearths) phenomena throughout this area raises historical questions about the land use in this region of Connecticut. Utilizing LiDAR data to generate DEM rasters to help identify the studied geographic features, I created a shapefile to map and visualize these features in hope to better understand the history behind them. In the section of Connecticut I mapped I identified and mapped approximately 24,000 hearths.</p>
+				<p>UConn Professor William Ouimet's Geomorphology and Earth Processes Research project has taught me about the scientific investigative component of GIS Analysis. As a member of his research group I have been digitizing the northwestern portion of the state of Connecticut. Searching and mapping the many thousands of geographic (charcoal hearths) phenomena throughout this area raises historical questions about the land use in this region of Connecticut. Utilizing LiDAR data to generate DEM rasters to help identify the studied geographic features, I created a shapefile to map and visualize these features in hope to better understand the history behind them. In the section of Connecticut I mapped I identified and mapped approximately 24,000 hearths.</p>
 
 			</li>
 
