--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -74,7 +74,15 @@
 
 				<a href="GeoMorph_Project.jpg" target="_blank">Geomorphology Case Study Research</a>
 
+			</li>
+
+			<li class="project-link">
+
 				<a href="Geomorph-Report-LiDAR.pdf" target="_blank">Geomorphology LiDAR Report</a>
+
+			</li>
+
+			<li class="project-link">
 
 				<a href="Geomorph-GSA-Conference.pdf" target="_blank">Geosciences at the NE Geological Society of America Conference</a>
 
