--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -84,7 +84,7 @@
 
 			<li class="project-link">
 
-				<a href="Geomorph-GSA-Conference.pdf" target="_blank">Geosciences at the NE Geological Society of America Conference</a>
+				<a href="Geomorph-GSA-Conference.pdf" target="_blank">Geospatial and LiDAR-based analysis of 18th to early 20th	century	timber harvesting and charcoal production in southern New England: NE Geological Society of America Conference</a>
 
 			</li>
 
