--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -113,6 +113,11 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong>GIS Tutor</strong>
+								<div>02/2016 - present</div>
+								<ul>
+									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
+								</ul>
 							<strong>Founded, ClioGraphica | Location Intelligence Firm</strong>
 								<div>11/2015 - present</div>
 								<ul>
