--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -113,17 +113,18 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>GIS Tutor</strong>
-								<div>02/2016 - present</div>
-								<ul>
-									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
-								</ul>
 							<strong>Founded, ClioGraphica | Location Intelligence Firm</strong>
 								<div>11/2015 - present</div>
 								<ul>
 									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide data digitization/creation, geospatial analysis, data storage (sale), and intelligence reports of client businesses or organizations</li>
 									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign or other available data sources that may already exist</li>
 									<li class="resume-list">Provide innovative geospatial services for a wide variety of clientele</li>
+								</ul>
+							<strong>GIS and History Tutor</strong>
+								<div>10/2014 - present</div>
+								<ul>
+									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
+									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research.
 								</ul>
 							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
 								<div>09/2015 - 12/2015</div>
