closed list item in resume

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -124,7 +124,7 @@
 								<div>10/2014 - present</div>
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
-									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research
+									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
 							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
 								<div>09/2015 - 12/2015</div>
