inserted link for resume, and renamed nav tab

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -20,7 +20,7 @@
 			</li>
 
 			<li class="navigation-item">
-				<a class="navigation-link selected" href="resume.html">Resume</a>
+				<a class="navigation-link selected" href="resume.html">CV / Resume</a>
 			</li>
 			
 			<li class="navigation-item">
@@ -31,9 +31,14 @@
 	
 	<div class="portfolio-container">
 		
-		<h2>Resume</h2>
+		<h2>Curricula Vitae</h2>
+		<h3>
 
 		<header>
+
+			<a href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a>
+
+			<div class="log-divider">. . . . . . .</div>
 
 			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Analyst</strong>
 			
