--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -20,7 +20,7 @@
 			</li>
 
 			<li class="navigation-item">
-				<a class="navigation-link" href="../resume.html">Resume</a>
+				<a class="navigation-link" href="../resume.html">CV / Resume</a>
 			</li>
 			
 			<li class="navigation-item">
