adjusted formatting for resume, and updated last edited date

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -35,7 +35,7 @@
 
 		<header>
 
-			<a href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a>
+			<h3><a href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></h3>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -54,7 +54,7 @@
 							<strong>University of Connecticut</strong>
 								<ul>
 									<li class="resume-list">Graduated: Fall 2015</li>
-									<li class="resume-list">Bachelor of Arts and Sciences in History, Geographic Information Systems/Sciences (GIS) minor</li>
+									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
 								</ul>
 							<strong>University of Vermont</strong>
 								<ul>
@@ -209,7 +209,7 @@
 	
 	</div>
 
-	<footer>Last edited by Zachary C. Raslan : January 25, 2016</footer>
+	<footer>Last edited by Zachary C. Raslan : March 9, 2016</footer>
 
 </body>
 </html>
