--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -41,7 +41,7 @@
 
 			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Analyst</strong>
 			
-			<a class="linkedin" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>
+			<a class="resume-link" href="https://www.linkedin.com/uas/login" target="_blank">Find me on LinkedIn</a>
 
 			<div class="log-divider">. . . . . . .</div>
 
