--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -35,7 +35,7 @@
 
 		<header>
 
-			<strong><a href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
+			<strong><a class="resume-link" href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
