--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -35,7 +35,7 @@
 
 		<header>
 
-			<strong><a class="resume-link" href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
+			<strong><a class="resume-short" href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
 
 			<div class="log-divider">. . . . . . .</div>
 
@@ -52,8 +52,8 @@
 					<section>
 						<h2 class="resume-headline">Education</h2>
 							<strong>University of Connecticut</strong>
+								<div>Graduated Fall, 2015 
 								<ul>
-									<li class="resume-list">Graduated: Fall 2015</li>
 									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
 								</ul>
 							<strong>University of Vermont</strong>
@@ -61,8 +61,8 @@
 									<li class="resume-list">Attended: 2011-2012</li>
 								</ul>
 							<strong>Westhill High School</strong>
+								<div>Graduated Spring 2011</div>
 								<ul>
-									<li class="resume-list">Diploma: Spring 2011</li>
 									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
 					</section>
@@ -108,7 +108,7 @@
 								</ul>
 							<strong>Authored</strong>
 								<ul>
-									<li class="resume-list">Northeastern Geological Society of America (GSA) Conference</li>
+									<li class="resume-list" href="Geomorph-GSA-Conference.pdf">Northeastern Geological Society of America (GSA) Conference</li>
 									<li class="resume-list">Northeast Arc Users Group Fall Educators (NEArc) Conference</li>
 								</ul>
 					</section>
