--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -108,7 +108,7 @@
 								</ul>
 							<strong>Authored</strong>
 								<ul>
-									<li class="resume-list" href="Geomorph-GSA-Conference.pdf">Northeastern Geological Society of America (GSA) Conference</li>
+									<li class="resume-list"><a href="Geomorph-GSA-Conference.pdf" target="_blank">Northeastern Geological Society of America (GSA) Conference</a></li>
 									<li class="resume-list">Northeast Arc Users Group Fall Educators (NEArc) Conference</li>
 								</ul>
 					</section>
