--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -52,7 +52,7 @@
 					<section>
 						<h2 class="resume-headline">Education</h2>
 							<strong>University of Connecticut</strong>
-								<div>Graduated Fall, 2015 
+								<div>Graduated Fall 2015 
 								<ul>
 									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
 								</ul>
