Index imgs, and resume editing

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -45,9 +45,8 @@
 		
 		<div class="index-content-bottom">
 
-			<p>My academic interests include digital Humanities history, Historical Geography, GIS, Historical GIS, Cliography, Cartography Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
-
-			<p>My recreational interests include fishing, hiking, camping, wood-working, metal-working; music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</p>
+			<img src="network-pic.jpg"/>
+			<img src="geocoding-pic.jpg"/>
 
 		</div>
 	
