--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -55,10 +55,12 @@
 								<div>Graduated Fall 2015 
 								<ul>
 									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
+									<li class="resume-list">Thesis: ClioGraphy, Historical Geospatial Analysis</li>
 								</ul>
 							<strong>University of Vermont</strong>
+								<div>Attended: 2011-2012</div>
 								<ul>
-									<li class="resume-list">Attended: 2011-2012</li>
+									<li class="resume-list"></li>
 								</ul>
 							<strong>Westhill High School</strong>
 								<div>Graduated Spring 2011</div>
