adjusted pics on index page, removed thesis from experience on resume

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -45,8 +45,8 @@
 		
 		<div class="index-content-bottom">
 
-			<img src="network-pic.jpg"/>
-			<img src="geocoding-pic.jpg"/>
+			<img class="index-img" src="network-pic.jpg"/>
+			<img class="index-img" src="geocoding-pic.jpg"/>
 
 		</div>
 	
