edited resume and index pic

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -33,6 +33,10 @@
 
 <div class="log-divider">. . .</div>
 
+<img class="index-img" src="geocoding-pic.jpg"/>
+
+<div class="log-divider">. . .</div>
+
 	<div class="index-container">
 
 		<div class="index-content-top">
@@ -42,11 +46,12 @@
 			<p><span class="index-email">zachary.raslan.1@gmail.com</span></p>
 
 		</div>
+
+<div class="log-divider">. . .</div>
 		
 		<div class="index-content-bottom">
 
 			<img class="index-img" src="network-pic.jpg"/>
-			<img class="index-img" src="geocoding-pic.jpg"/>
 
 		</div>
 	
