--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -119,51 +119,58 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>Founded, ClioGraphica | Location Intelligence Firm</strong>
+							<strong>ClioGraphica | Location Intelligence Firm</strong>
+								<div>Founder/Operator</div>
 								<div>11/2015 - present</div>
 								<ul>
-									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide data digitization/creation, geospatial analysis, data storage (sale), and intelligence reports of client businesses or organizations</li>
-									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign or other available data sources that may already exist</li>
-									<li class="resume-list">Provide innovative geospatial services for a wide variety of clientele</li>
+									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide geospatial intelligence consulting services for non-profits organizations, client businesses, and municipalities</li>
+									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign, digitization of organization records, or other available data sources</li>
+									<li class="resume-list">Provide innovative geospatial services utilizing cutting edge technology and data models for a wide variety of clientele</li>
 								</ul>
-							<strong>GIS and History Tutor</strong>
+							<strong>GIS, History, & Digital Humanities Tutor</strong>
 								<div>10/2014 - present</div>
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
-							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
+							<strong>Redniss and Mead Land Use Consulting Firm</strong>
+								<div>Intern in Planning Department, GIS Specialist</div>
 								<div>09/2015 - 12/2015</div>
 								<ul>
-									<li class="resume-list">Worked in the Land Use and Planning Department on projects contracted by various types of clientele</li>
+									<li class="resume-list">Worked in Land Use and Planning Department on ecologically diverse projects throughout Fairfield County, CT</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
-									<li class="resume-list">Researched land records and regulations pertinent to the properties in effort to draft regulation variances or project proposals</li>
+									<li class="resume-list">Researched land records and legal regulations pertinent to the properties in effort to draft regulation variances or project proposals</li>
 								</ul>
-							<strong>Assistant to Connecticut State Archeologist</strong>
+							<strong>Connecticut State Museum of Natural History</strong>
+							<div>Student Administrator</div>
+							<div>5/2014 – 5/2015</div>
+								<ul>
+									<li class="resume-list">Organized and maintaind museum files regarding different sponsored events</li>
+								</ul>
+							<strong>Connecticut State Archeologist, Brian Jones</strong>
+								<div>Research Assistant, Online GIS</div>
 								<div>09/2014 – 12/2014</div>
 								<ul>
 									<li class="resume-list">Utilized open source software to develop and design an online  GIS interface to house and map data of the Office of the State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
 								</ul>
-							<strong>Member of Geomorphology and Earth Processes Research Team led by Prof. Ouimet</strong>
+							<strong>Geomorphology and Earth Processes Research Team</strong>
+								<div>Researcher, GIS Analyst, led by Professor Ouimet</div> 
 								<div>06/10/2014 – 12/10/14</div>
 								<ul>
 									<li class="resume-list">Study the history, mechanics and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
-							<strong>Student Administrator at Connecticut State Museum of Natural History</strong>
-							<div>5/2014 – 5/2015</div>
-								<ul>
-									<li class="resume-list">Organized and maintaind museum files regarding different sponsored events</li>
-								</ul>
-							<strong>Census and Geospatial Data Assistant at University of Connecticut Libraries’ Maps and Geographic Information Center (MAGIC) and Connecticut State Data Center</strong>
-							<div>Intern 10/2013 – 12/2013; Employee 01/2014 – 6/2014</div>
+							<strong>Connecticut State Data Center & Univ. Libraries’ Maps and Geographic Information Center</strong>
+							<div>Census and Geospatial Data Assistant, Historical GIS Specialist, GIS Analyst</div>
+							<div>10/2013 – 6/2014</div>
 								<ul>
 									<li class="resume-list">Functioned as a GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Used ArcGIS as GIS software; familiar with file sharing methods among multi-person GIS analyst teams</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
-							<strong>Member of Virtual Hartford Research Team</strong>
+							<strong>Virtual Hartford Research Team</strong>
+							<div>Digital Humanities Researcher, GIS Specialist</div>
 							<div>10/2013 – 12/2015</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
