--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -139,7 +139,7 @@
 								<ul>
 									<li class="resume-list">Worked in Land Use and Planning Department on ecologically diverse projects throughout Fairfield County, CT</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
-									<li class="resume-list">Researched land records and legal regulations pertinent to the properties in effort to draft regulation variances or project proposals</li>
+									<li class="resume-list">Researched land records and legal regulations pertinent to client properties in effort to draft regulation variances or project proposals</li>
 								</ul>
 							<strong>Connecticut State Museum of Natural History</strong>
 							<div>Student Administrator</div>
