revising portfolio - adding picture

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -9,51 +9,42 @@
 </head>
 
 <body>
-	<nav class="portfolio-navigation">
-		<ul class="navigation-menu">
-			<li class="navigation-item">
-				<a class="navigation-link selected" href="index.html">Home</a>
-			</li>
-			
-			<li class="navigation-item">
-				<a class="navigation-link" href="bio.html">Bio</a>
-			</li>
-
-			<li class="navigation-item">
-				<a class="navigation-link" href="resume.html">CV / Resume</a>
-			</li>
-			
-			<li class="navigation-item">
-				<a class="navigation-link" href="projects-folder/projects.html">Projects</a>
-			</li>
-		</ul>
-	</nav>
 	
 	<h1>Zachary C. Raslan</h1>
 
+<nav class="portfolio-navigation">
+		<ul class="index-navigation-menu">
+			<!--<li class="index-navigation-item">
+				<a class="navigation-link selected" href="index.html">Home</a>
+			</li>-->
+			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="bio.html">Bio</a>
+			</li>
+
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="resume.html">CV / Resume</a>
+			</li>
+			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="projects-folder/projects.html">Projects</a>
+			</li>
+		</ul>
+	</nav>
+
 <div class="log-divider">. . .</div>
 
-<img class="index-img" src="geocoding-pic.jpg"/>
-
-<div class="log-divider">. . .</div>
+<img class="index-img" src="1909map.jpg"/>
 
 	<div class="index-container">
 
-		<div class="index-content-top">
+		<!--<div class="index-content-top">
 
 			<p>Please feel free to contact me by email at:</p>
 
 			<p><span class="index-email">zachary.raslan.1@gmail.com</span></p>
 
-		</div>
-
-<div class="log-divider">. . .</div>
-		
-		<div class="index-content-bottom">
-
-			<img class="index-img" src="network-pic.jpg"/>
-
-		</div>
+		</div>-->
 	
 	</div>
 
