--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -31,18 +31,20 @@
 	
 	<div class="portfolio-container">
 		
-		<h2>History and GIS</h2>
+		<h2>GIS, History, and Digital Humanities</h2>
 
 		<h3>Cliography</h3>
 		<hr>
 
 		<ul>
 
-			<li class="project-link">
+			<div class="project-link">
 
-				<a href="cliography-poster.pdf" target="_blank">Cliography Poster</a>
+				<a href="cliography-poster.pdf" target="_blank">
+				<img class="project-img" src="img-cliog-poster.jpg"/>
+				</a>
 				
-			</li>
+			</div>
 
 			<li class="project-content">
 
