--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -30,6 +30,15 @@
 	</nav>
 	
 	<div class="portfolio-container">
+
+	<div class="resume-img-container">
+
+		<img class="resume-img" src="geocoding-pic.jpg"/>
+		<img class="resume-img" src="img-buffer.jpg"/>
+		<img class="resume-img" src="img-charcoal-hearths.jpg"/>
+		<img class="resume-img" src="network-pic.jpg"/>
+
+	</div>
 		
 		<h2>Curricula Vitae</h2>
 
@@ -37,7 +46,7 @@
 
 			<strong><a class="resume-short" href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
 
-			<div class="log-divider">. . . . . . .</div>
+			<!--<div class="log-divider">. . . . . . .</div>-->
 
 			<strong class="resume-headline">Researcher/Analyst, Cartographer, GIS Analyst</strong>
 			
