--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -64,7 +64,7 @@
 								<div>Graduated Fall 2015 
 								<ul>
 									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
-									<li class="resume-list">Thesis: ClioGraphy, Historical Geospatial Analysis</li>
+									<li class="resume-list">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</li>
 								</ul>
 							<strong>University of Vermont</strong>
 								<div>Attended: 2011-2012</div>
@@ -97,7 +97,7 @@
 								<ul>
 									<li class="resume-list">Awarded scholarship for demonstrating an interest in music and having a record of academic achievement</li>
 								</ul>
-							<strong>O.U.R. Travel to Present Research Award</strong>
+							<strong>O.U.R. Travel Award</strong>
 								<ul>
 									<li class="resume-list">Awarded grant funding travel to present research at the Association for the Study of Connecticut History (ASCH) Conference: Fairfield University (April 5, 2014)</li>
 							<strong>IDEA Grant Recipient</strong>
