--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -64,13 +64,7 @@
 
 			<li class="project-content">
 
-				<p>My undergraduate capstone project is a thesis which aims to explore a variety of GIS (Geographic Information Systems) analysis-based methods and how they could be incorporated in historical scholarship. Cliography is essentially a synthesis of these methods and historical research wherein GIS is an integral part of historical research/scholarship. These research methodologies were developed through projects including:</p>
-
-				<p>Virtual Hartford / MAGIC / CTSDA: I initially got involved with spatial analytics and ArcGIS software as a part of joining the Virtual Hartford research team. For this digital humanities historical research project my particular focus was on mapping Hartford History. As an intern at the UConn Libraries Map and Geographic Information Center and Connecticut State Data Center, I georeferenced and geoprocessed 19th and 20th century maps of Hartford, CT. A particular microhistory which this research has been helpful for was trying to identify population trends with a focus on children and spatial relation to near-by parks. I created shapefiles of the parks and 1909 voting ward districts to be able to develop databases that can analyze and map trends or patterns of this historical data.</p>
-
-				<p>UConn IDEA Grant: UConn IDEA Grant committee awarded me an undergraduate research grant to fund my self-developed, self-directed project. For this research, I developed a methodology (Cliography) for obtaining, digitizing and geoprocessing historical maps and census data to identify boundary and population dynamics, characteristics, and development ranging from ca 1640 to present day. The end goal of this project is to provide researchers of historic Hartford, CT databases of Cliographic data.</p>
-
-				<p>Office of the State Archeologist: After speaking with the Connecticut State Archeologist, we agreed that I would help him by developing an online GIS to map and store the data of the office of the CT State Archeologist. This project inspired a Cliographic method which utilizes online mapping platforms with exceptional interface qualities that simultaneously allow me to update, maintain and publically display data.</p>
+				<p>My undergraduate capstone project is a thesis which aims to explore a variety of GIS (Geographic Information Systems) analysis-based methods and how they could be incorporated in historical scholarship. Cliography is essentially a synthesis of these methods and historical research wherein GIS is an integral part of historical research/scholarship.</p>
 
 			</li>
 
