projects page nav pane

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -33,7 +33,18 @@
 		
 		<h2>GIS, History, and Digital Humanities</h2>
 
-		<h3>Cliography</h3>
+		<h3><a name="Cliography">Cliography</a></h3>
+
+<div>
+	<a class="project-menu" href="#Cliography">Research and DH</a>
+</div>
+<div>
+	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
+</div>
+<div>
+	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
+</div>
+
 		<hr>
 
 		<ul>
@@ -110,7 +121,18 @@
 
 		</ul>
 
-		<h3>GIS Course Work Examples</h3>
+		<h3><a name="GIS Course Work Examples">GIS Course Work Examples</a></h3>
+
+<div>
+	<a class="project-menu" href="#Cliography">Research and DH</a>
+</div>
+<div>
+	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
+</div>
+<div>
+	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
+</div>
+
 		<hr>
 
 		<ul>
@@ -215,7 +237,7 @@
 		
 			<li class="project-content">
 
-				<p>This GIS course work example was a final for one of my classes where in I created a map and graph based on example GIS data. This coursework is comporable to Location Intelligence.</p>
+				<p>This GIS course work example was a final for one of my classes where in I created a map and graph based on example GIS data. This coursework is comparable to Location Intelligence.</p>
 
 			</li>
 
@@ -277,7 +299,18 @@
 
 		</ul>
 
-	<h3>Historical Analysis Examples</h3>
+	<h3><a name="Historical Analysis Examples">Historical Analysis Examples</a></h3>
+
+<div>
+	<a class="project-menu" href="#Cliography">Research and DH</a>
+</div>
+<div>
+	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
+</div>
+<div>
+	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
+</div>
+
 	<hr>
 
 		<ul>
