resume adjustments and footer link

--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -48,7 +48,10 @@
 	
 	</div>
 
-	<footer>Last edited by Zachary C. Raslan : March 9, 2016</footer>
+	<a href="#">
+		<footer>Last edited by Zachary C. Raslan : March 14, 2016
+		</footer>
+	</a>
 
 </body>
 </html>
