--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -34,16 +34,22 @@
 		<h2>GIS, History, and Digital Humanities</h2>
 
 		<h3><a name="Cliography">Cliography</a></h3>
-
-<div>
-	<a class="project-menu" href="#Cliography">Research and DH</a>
-</div>
-<div>
-	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
-</div>
-<div>
-	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
-</div>
+		
+<h4>Project Menu</h4>		
+<nav>
+	<div>
+		<a class="project-menu" href="#">Top of Page</a>
+	</div>
+	<div>
+		<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
+	</div>
+	<div>
+		<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+	</div>
+	<div>
+		<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
+	</div>
+</nav>
 
 		<hr>
 
@@ -124,10 +130,13 @@
 		<h3><a name="GIS Course Work Examples">GIS Course Work Examples</a></h3>
 
 <div>
-	<a class="project-menu" href="#Cliography">Research and DH</a>
+	<a class="project-menu" href="#">Top of Page</a>
 </div>
 <div>
-	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
+	<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
+</div>
+<div>
+	<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 </div>
 <div>
 	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
@@ -302,10 +311,13 @@
 	<h3><a name="Historical Analysis Examples">Historical Analysis Examples</a></h3>
 
 <div>
-	<a class="project-menu" href="#Cliography">Research and DH</a>
+	<a class="project-menu" href="#">Top of Page</a>
 </div>
 <div>
-	<a class="project-menu" href="#GIS Course Work Examples">GIS</a>
+	<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
+</div>
+<div>
+	<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 </div>
 <div>
 	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
@@ -384,7 +396,10 @@
 
 	</div>
 
-	<footer>Last edited by Zachary C. Raslan : March 9, 2016</footer>
+	<a href="#">
+		<footer>Last edited by Zachary C. Raslan : March 14, 2016
+		</footer>
+	</a>
 
 </body>
 </html>
