--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -44,7 +44,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short.pdf" target="_blank">Click here to view my one page Resume</a></strong>
+			<strong><a class="resume-short" href="resume-short.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<!--<div class="log-divider">. . . . . . .</div>-->
 
@@ -60,19 +60,21 @@
 
 					<section>
 						<h2 class="resume-headline">Education</h2>
-							<strong>University of Connecticut</strong>
-								<div>Graduated Fall 2015 
+							<strong>BA History, GIS</strong>
+								<div>University of Connecticut, College of Liberal Arts and Sciences</div>
+								<div>Fall 2015</div> 
 								<ul>
 									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
 									<li class="resume-list">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</li>
 								</ul>
-							<strong>University of Vermont</strong>
+							<div>University of Vermont</div>
 								<div>Attended: 2011-2012</div>
 								<ul>
 									<li class="resume-list"></li>
 								</ul>
-							<strong>Westhill High School</strong>
-								<div>Graduated Spring 2011</div>
+							<strong>High School Diploma</strong>
+								<div>Westhill High School</div>
+								<div>Spring 2011</div>
 								<ul>
 									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
@@ -84,7 +86,7 @@
 						<h2 class="resume-headline">Honors</h2>
 							<strong>University of Connecticut</strong>
 								<ul>
-									<li class="resume-list">University of Connecticut Honors Scholar Program: <span>March, 2014 - December, 2015</span></li>
+									<li class="resume-list">University of Connecticut Honors Scholar Program: <span class="resume">March, 2014 - December, 2015</span></li>
 									<li class="resume-list">Phi Alpha Theta History Honors Society: <span>Inducted May, 2014</span></li>
 								</ul>
 					</section>
@@ -221,7 +223,10 @@
 	
 	</div>
 
-	<footer>Last edited by Zachary C. Raslan : March 9, 2016</footer>
+	<a href="#">
+		<footer>Last edited by Zachary C. Raslan : March 14, 2016
+		</footer>
+	</a>
 
 </body>
 </html>
